--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- 5: De applicatie javascript bestanden -->
     <script src="js/ball.js" type="text/javascript"></script>
+    <script src="js/staticball.js" type="text/javascript"></script>
     <script src="js/flipperen.js" type="text/javascript"></script>
 </head>
 <body>
