--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- 3: De javascript bestanden van externe partijen -->
     <!--<script src="javascript/extern/prototypes.js" type="text/javascript"></script>-->
     <script src="js/extern/jquery-3.6.0.min.js" type="text/javascript"></script>
-    <script src="js/extern/cp.js" type="text/javascript"></script>
+	<script src="js/extern/matter.min.js" type="text/javascript"></script>
 
     <!-- 5: De applicatie javascript bestanden -->
     <script src="js/ball.js" type="text/javascript"></script>
