--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <script src="js/staticball.js" type="text/javascript"></script>
     <script src="js/flipperen.js" type="text/javascript"></script>
 </head>
-<body>
+<body style="overflow: hidden">
 <div id="messageDiv" style="z-index:999;"></div>
 <script type="text/javascript">
 	$(function() {
